building outlines of website structure

--- a/views/nav.html
+++ b/views/nav.html
@@ -1,5 +1,6 @@
-<div>
-    <p>Home</p>
-    <p>Not Home</p>
-    <p>IDK</p>
-</div>
+<ul>
+    <li><a href="../main.html">Home</a></li>
+    <li><a href="../projects.html">Projects</a></li>
+    <li><a href="../skills">Skills</a></li>
+    <li><a href="../main.html">Surprise</></li>
+</ul>
