--- a/views/nav.html
+++ b/views/nav.html
@@ -1,6 +1,6 @@
 <ul>
     <li><a href="../main.html">Home</a></li>
     <li><a href="../projects.html">Projects</a></li>
-    <li><a href="../skills">Skills</a></li>
-    <li><a href="../main.html">Surprise</></li>
+    <li><a href="../skills.html">Skills</a></li>
+    <li><a href="../main.html">Surprise</a></li>
 </ul>
