add navbar and start on main page

--- a/views/nav.html
+++ b/views/nav.html
@@ -1,6 +1,7 @@
-<ul>
-    <li><a href="../main.html">Home</a></li>
-    <li><a href="../projects.html">Projects</a></li>
-    <li><a href="../skills.html">Skills</a></li>
-    <li><a href="../main.html">Surprise</a></li>
-</ul>
+<nav>
+    <h1 class="nav_title title">Justin Hanna</h1>
+    <a class="nav_item" href="../main.html">Home</a>
+    <a class="nav_item" href="../projects.html">Projects</a>
+    <a class="nav_item" href="../skills.html">Skills</a>
+    <a class="nav_item" href="../main.html">Surprise</a>
+</nav>
