--- a/views/main_content.html
+++ b/views/main_content.html
@@ -1,25 +1,24 @@
 <!-- Intro Description -->
-<h1>JUSTIN HANNA</h1>
-<div>
-    <image>This is a picture of me</image>
-    <p>
+<div id="intro_container" class="content_container">
+    <image id="profile_picture" src="../images/pfp.jpg"></image>
+    <p id="main_text" class="text">
         Hi, I&#8217;m Justin! I&#8217;m a Computer Engineering and Management student at McMaster
-        University.<br>
+        University.<br><br>
         I have a keen interest in learning about logic, circuitry, microarchitectures and their applications.
     </p>
 </div>
 
 <!-- Most Recent Project-->
-<div>
+<div class="content_container">
     <h2>Project Title</h2>
     <div>Project Skills</div>
-    <p>Project Description</p>
+    <p class="text">Project Description</p>
 </div>
 
 <!-- Linked-In and Socials Links -->
-<div>
+<div class="content_container">
     <image>LinkedIn Logo</image>
-    <p>A complete outline of my professional experience can be found on my Linked-In Page</p>
+    <p class="text">A complete outline of my professional experience can be found on my Linked-In Page</p>
 </div>
 
 <!-- Notable Experiences -->
