--- a/views/nav.html
+++ b/views/nav.html
@@ -1,7 +1,7 @@
 <nav>
     <h1 class="nav_title title">Justin Hanna</h1>
-    <a class="nav_item" href="../main.html">Home</a>
+    <a class="nav_item" href="../index.html">Home</a>
     <a class="nav_item" href="../projects.html">Projects</a>
     <a class="nav_item" href="../skills.html">Skills</a>
-    <a class="nav_item" href="../main.html">Surprise</a>
+    <a class="nav_item" href="../index.html">Surprise</a>
 </nav>
