changing emoji and moved all head loads to file

--- a/views/nav.html
+++ b/views/nav.html
@@ -1,5 +1,6 @@
 <nav>
     <h1 class="nav_title title">Justin Hanna</h1>
+    <script>$(".nav_title")[0].innerHTML = emoji + $(".nav_title")[0].innerHTML;</script>
     <a class="nav_item" href="../index.html">Home</a>
     <a class="nav_item" href="../projects.html">Projects</a>
     <a class="nav_item" href="../skills.html">Skills</a>
