--- a/views/head.html
+++ b/views/head.html
@@ -1,3 +1,27 @@
 <link rel="stylesheet" type="text/css" href="./styles/main.css" />
 <link rel="stylesheet" type="text/css" href="./styles/nav.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret One|Nunito">
+<script>
+    $(function () {
+        $("div[html-include]").each(function () {
+            var data = $(this).attr("html-include");
+            $(this).load("views/" + data);
+        });
+        emoji_index = Math.floor(Math.random() * 4) + 1;
+        emoji = "ERROR";
+        switch (emoji_index) {
+            case 1:
+                emoji = "🛠️ ";
+                break;
+            case 2:
+                emoji = "👨‍💻 ";
+                break;
+            case 3:
+                emoji = "👨‍🏭 ";
+                break;
+            case 4:
+                emoji = "👨‍🎓 ";
+                break;
+        }
+    });
+</script>
